Finished borrower API
